Activate introduction animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
         <title>Goku VS Jiren - Game</title>
     </head>
     <body>
+        <section id="intro_page">
+            <div id="intro_1">
+                <svg viewBox="0 0 452 540">
+                    <text fill="silver" font-family="Arial" font-size="100" x="30" y="300">Hidekela</text>
+                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="330">presents</text>
+                </svg>
+            </div>
+            <div id="intro_2">
+                <svg viewBox="0 0 452 540">
+                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
+                    <path fill='RGB(229,162,40)' d='M 0,0 L 451,0 410,460 225,512 41,460'/>
+                    <path fill='RGB(241,191,38)' d='M 226,472 L375,431 410,37 226,37'/>
+                    <path fill='RGB(236,237,238)' d='M 226,94 L 113,94 102,265 226,265 226,208 160,208 165,150 226,150 z M 226,355 L 162,338 158,293 102,293 109,382 226,414 z'/>
+                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 357,208 226,208 z M 226,94 L 339,94 357,180 301,180 293,150 226,150 z'/>
+                </svg>
+            </div>
+            <div id="intro_3">
+                <svg viewBox="0 0 452 540">
+                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
+                    <path fill='RGB(227,79,38)' d='M 41,460 L 0,0 451,0 410,460 225,512'/>
+                    <path fill='RGB(239,101,42)' d='M 226,472 L 375,431 410,37 226,37'/>
+                    <path fill='RGB(236,237,238)' d='M 226,208 L 151,208 146,150 226,150 226,94 84,94 99,265 226,265 z M 226,355 L162,338 158,293 102,293 109,382 226,414 z'/>
+                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 357,208 226,208 z M 226,94 L226,150 362,150 367,94 z'/>
+                </svg>
+            </div>
+            <div id="intro_4">
+                <svg viewBox="0 0 452 540">
+                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
+                    <path fill='RGB(12,115,184)' d='M 41,460 L 0,0 451,0 410,460 225,512'/>
+                    <path fill='RGB(48,169,220)' d='M 226,472 L 375,431 410,37 226,37'/>
+                    <path fill='RGB(236,237,238)' d='M 226,208 L 94,208 99,265 226,265 z M 226,94 L 84,94 89,150 226,150 z M 226,355 L 102,322 109,382 226,414 z'/>
+                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 367,94 226,94 226,150 306,150 300,208 226,208 z'/>
+                </svg>
+            </div>
+            <script>
+                setTimeout(function(){
+                    document.getElementById('intro_page').style = "display: none";
+                },24000);
+            </script>
+        </section>
         <section id="game_page">
             <header>
                 <img id="terrain" src="terrain/terrain.jpg" alt=""/>
@@ -334,46 +374,6 @@
                 <li><button id="menu_button">MENU</button></li>
             </ul>
         </section>
-        <!-- <section id="intro_page">
-            <div id="intro_1">
-                <svg viewBox="0 0 452 540">
-                    <text fill="silver" font-family="Arial" font-size="100" x="30" y="300">Hidekela</text>
-                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="330">presents</text>
-                </svg>
-            </div>
-            <div id="intro_2">
-                <svg viewBox="0 0 452 540">
-                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
-                    <path fill='RGB(229,162,40)' d='M 0,0 L 451,0 410,460 225,512 41,460'/>
-                    <path fill='RGB(241,191,38)' d='M 226,472 L375,431 410,37 226,37'/>
-                    <path fill='RGB(236,237,238)' d='M 226,94 L 113,94 102,265 226,265 226,208 160,208 165,150 226,150 z M 226,355 L 162,338 158,293 102,293 109,382 226,414 z'/>
-                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 357,208 226,208 z M 226,94 L 339,94 357,180 301,180 293,150 226,150 z'/>
-                </svg>
-            </div>
-            <div id="intro_3">
-                <svg viewBox="0 0 452 540">
-                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
-                    <path fill='RGB(227,79,38)' d='M 41,460 L 0,0 451,0 410,460 225,512'/>
-                    <path fill='RGB(239,101,42)' d='M 226,472 L 375,431 410,37 226,37'/>
-                    <path fill='RGB(236,237,238)' d='M 226,208 L 151,208 146,150 226,150 226,94 84,94 99,265 226,265 z M 226,355 L162,338 158,293 102,293 109,382 226,414 z'/>
-                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 357,208 226,208 z M 226,94 L226,150 362,150 367,94 z'/>
-                </svg>
-            </div>
-            <div id="intro_4">
-                <svg viewBox="0 0 452 540">
-                    <text fill="silver" font-family="Arial" font-size="20" x="190" y="535">product</text>
-                    <path fill='RGB(12,115,184)' d='M 41,460 L 0,0 451,0 410,460 225,512'/>
-                    <path fill='RGB(48,169,220)' d='M 226,472 L 375,431 410,37 226,37'/>
-                    <path fill='RGB(236,237,238)' d='M 226,208 L 94,208 99,265 226,265 z M 226,94 L 84,94 89,150 226,150 z M 226,355 L 102,322 109,382 226,414 z'/>
-                    <path fill='RGB(255,255,255)' d='M 226,265 L 295,265 288,338 226,355 226,414 341,382 367,94 226,94 226,150 306,150 300,208 226,208 z'/>
-                </svg>
-            </div>
-            <script>
-                setTimeout(function(){
-                    document.getElementById('intro_page').style = "display: none";
-                },20000);
-            </script>
-        </section> -->
         <footer id="c">github & fb: Hidekela</footer>
     </body>
     <script src="functions.js"></script>
